[gd_scene load_steps=4 format=3 uid="uid://bij4c3y3h72xf"]

[ext_resource type="Script" path="res://scenes/menu/story_menu/stage_menu.gd" id="1_pad2a"]
[ext_resource type="Texture2D" uid="uid://cvp2va6dqs3qh" path="res://art/left_arrow.png" id="2_guujs"]
[ext_resource type="Texture2D" uid="uid://l6gcjt3n18iw" path="res://art/right_arrow.png" id="3_lrm2r"]

[node name="container" type="VBoxContainer"]
custom_minimum_size = Vector2(720, 0)
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_pad2a")

[node name="stageView" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 600)
layout_mode = 2
theme_override_constants/separation = 10

[node name="stageSelector" type="VBoxContainer" parent="stageView"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="squadSelector" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="prevSquadBtn" type="TextureButton" parent="squadSelector"]
layout_mode = 2
texture_normal = ExtResource("2_guujs")

[node name="Label" type="Label" parent="squadSelector"]
custom_minimum_size = Vector2(520, 0)
layout_mode = 2
text = "Squad nÂ°5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="nextSquadBtn" type="TextureButton" parent="squadSelector"]
layout_mode = 2
texture_normal = ExtResource("3_lrm2r")

[node name="squadDetailPlaceHolder" type="Control" parent="."]
custom_minimum_size = Vector2(0, 350)
layout_mode = 2

[node name="startBtn" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "START"
